--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   provider: ^6.0.4
+  flutter_dotenv: ^5.0.2 
+  http: ^0.13.4 
+  shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,6 +60,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets: 
+    - .env
   fonts:
     - family: Lato
       fonts:
